--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="text" size="10%" name="nama">
             <div id="menu">
                 <ul>
-                    <li><a input type="submit" href="profile.html"></ainput></a></li>
+                    <li><a input type="submit" href="profile.html"></a></li>
                 </ul>
                 </div>
         </form>
