--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="menu">
         <ul>
             <li><a href="opening.html">opening</a></li>
-            <li><a class="aktif" href="profile.html">profile</a></li>
+            <li><a class="aktif" href="index.html">profile</a></li>
             <li><a href="wew.html">hobby</a></li>
             <li><a href="#">cv</a></li>
             <li><a href="#">desain</a></li>
