--- a/wew.html
+++ b/wew.html
@@ -13,8 +13,8 @@
         </div>
     <div id="menu">
         <ul>
-            <li><a href="index.html">opening</a></li>
-            <li><a href="profile.html">profile</a></li>
+            <li><a href="">opening</a></li>
+            <li><a href="index.html">profile</a></li>
             <li><a class="aktif" href="wew.html">hobby</a></li>
             <li><a href="#">cv</a></li>
             <li><a href="#">desain</a></li>
