--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="menu">
         <ul>
             <li><a class="aktif" href="index.html">profile</a></li>
-            <li><a href="wew.html">hobby</a></li>
+            <li><a href="wew.html">film</a></li>
             <li><a href="#">cv</a></li>
             <li><a href="#">desain</a></li>
         </ul>
@@ -33,7 +33,9 @@
 
 
     <div id="center">
-        <h1>kulit pisang</h1>
+        <h1>Lahir : 18 Mei</h1>
+        <h1>hoby  : mendengarkan musik</h1>
+        <h1></h1>
         
 
     </div>
