--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <line x1="11" y1="5" x2="13" y2="5" />
                 <line x1="12" y1="17" x2="12" y2="17.01" />
               </svg>
-            <h2>tib.apk</h2>
+            <h2><a href="Tib.apk" download="Tib.apk">tib.apk</a></h2>
         </div>
 
 
